--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,5 +16,5 @@
         "kelosky.ibm-jcl",
         "Zowe.vscode-extension-for-zowe"
     ],
-    // "remoteUser": "node"
+    "remoteUser": "node"
 }
