--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,11 +16,11 @@
 
 # [Optional] Uncomment if you want to install more global node modules
 
-FROM node:lts-alpine 
+FROM node:lts-alpine
 
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 RUN if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then groupmod --gid $USER_GID node && usermod --uid $USER_UID --gid $USER_GID node; fi
-# RUN npm install -g @zowe/cli@next
+RUN npm install -g @zowe/cli@next
 
-RUN su node -c "npm install -g @zowe/cli@next"
+# RUN su node -c "npm install -g @zowe/cli@next"
