--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,7 @@
 
 # Update the VARIANT arg in docker-compose.yml to pick a Node version: 10, 12, 14
 # ARG VARIANT=12
-FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:dev-${VARIANT}
+# FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:dev-${VARIANT}
 
 # # Update args in docker-compose.yaml to set the UID/GID of the "node" user.
 
@@ -16,7 +16,7 @@ FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:dev-${VARIANT}
 
 # [Optional] Uncomment if you want to install more global node modules
 
-# FROM node:lts-alpine
+FROM node:lts-alpine
 
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
@@ -27,7 +27,7 @@ RUN if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then groupmod --g
 
 # RUN npm config set prefix '~/.npm-global'
 # RUN export PATH=~/.npm-global/bin:$PATH
-# RUN ls -la /usr/local/lib/node_modules
+RUN ls -la /usr/local/lib/node_modules
 # RUN id -un
 # RUN sudo chown -R $USER /usr/local/lib/node_modules
 # RUN su node -c "npm install -g @zowe/cli@next"
