--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,12 +1,13 @@
 # https://github.com/microsoft/vscode-dev-containers/blob/master/containers/javascript-node-postgres/.devcontainer/Dockerfile
 
 # Update the VARIANT arg in docker-compose.yml to pick a Node version: 10, 12, 14
-# ARG VARIANT=3.12
-# FROM mcr.microsoft.com/vscode/devcontainers/base:alpine-${VARIANT}
-# # Update args in docker-compose.yaml to set the UID/GID of the "node" user.
-
 ARG VARIANT=12
 FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:dev-${VARIANT}
+
+# Update args in docker-compose.yaml to set the UID/GID of the "node" user.
+ARG USER_UID=1000
+ARG USER_GID=$USER_UID
+RUN if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then groupmod --gid $USER_GID node && usermod --uid $USER_UID --gid $USER_GID node; fi
 
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
@@ -17,19 +18,4 @@ FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:dev-${VARIANT}
 # RUN su node -c "source /usr/local/share/nvm/nvm.sh && nvm install ${EXTRA_NODE_VERSION}"
 
 # [Optional] Uncomment if you want to install more global node modules
-
-# FROM node:lts-alpine
-
-ARG USER_UID=1000
-ARG USER_GID=$USER_UID
-RUN if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then groupmod --gid $USER_GID node && usermod --uid $USER_UID --gid $USER_GID node; fi
-# RUN npm install -g @zowe/cli@next
-
-# RUN mkdir ~/.npm-global
-
-# RUN npm config set prefix '~/.npm-global'
-# RUN export PATH=~/.npm-global/bin:$PATH
-# RUN ls -la /usr/local/lib/node_modules
-# RUN id -un
-# RUN sudo chown -R $USER /usr/local/lib/node_modules
 RUN su node -c "npm install -g @zowe/cli@next"
